tests/specs/ecosystem/radix_ui_fork/react_popper/0_0_7.test
radix-ui-fork/react-popper/0.0.7
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'Element'.
type Boundary = Element | null;
                ~~~~~~~
    at file://<tmpdir>/src/Popper.tsx:32:17

